<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="4">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="3"
        android:orientation="vertical">

        <ImageView
            style="@style/ThemeOverlay.FirebaseIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/firebase_lockup_400" />

        <TextView
            style="@style/ThemeOverlay.Mytext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firebase_google"
            android:id="@+id/date"/>


        <Button
            android:id="@+id/google_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:theme="@style/ThemeOverlay.MyDarkButton" />

        <Button
            android:id="@+id/disconnect_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/sign_out_button"
            android:text="@string/disconnect"
            android:theme="@style/ThemeOverlay.MyDarkButton" />
    </LinearLayout>


</LinearLayout>