<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.amprime.firebaseauth.EmailAndPasswordActivity"
    android:weightSum="4"
    android:orientation="vertical"
    android:background="@color/row_activated"
   >

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent">
      <ImageView
          android:layout_width="match_parent"
          android:layout_height="180dp"
          android:src="@drawable/main_gradient"/>
      <ImageView
          android:layout_centerHorizontal="true"
          android:layout_marginTop="30dp"

          android:layout_width="wrap_content"
          android:layout_height="70dp"
          android:id="@+id/Fireicon"
          app:srcCompat="@drawable/firebase_lockup_400"
          style="@style/ThemeOverlay.FirebaseIcon"/>
      <androidx.cardview.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_centerHorizontal="true"
          android:layout_below="@id/Fireicon"
          android:layout_margin="18dp"
          app:cardElevation="2dp"
          >
          <LinearLayout

              android:layout_width="match_parent"
              android:layout_height="360dp"
              android:background="@color/row_activated"
              android:orientation="vertical"
              android:padding="4dp"
              >
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center"
                  android:text="Sign In "
                  android:textStyle="bold"
                  android:textSize="18sp"
                  android:textColor="@color/colorAccent"
                  android:padding="8dp"/>

              <com.google.android.material.textfield.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="8dp"
                  >

                  <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/userField"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/username_hint"
                      android:inputType="textEmailAddress" />
              </com.google.android.material.textfield.TextInputLayout>

              <com.google.android.material.textfield.TextInputLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="16dp"
                  >

                  <com.google.android.material.textfield.TextInputEditText
                      android:id="@+id/passwordField"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:hint="@string/password"
                      android:inputType="textPassword"
                      />
              </com.google.android.material.textfield.TextInputLayout>
              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center"
                  android:padding="16dp">
                  <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                      android:id="@+id/sign_in_button"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:scaleType ="fitCenter"
                      app:finalCornerAngle="50dp"
                      app:initialCornerAngle="0dp"
                      android:text="Sign In"/>

              </LinearLayout>

              <TextView
                  android:id="@+id/forgot_password_text"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:padding="12dp"
                  android:text="@string/forgot_password_reset_it"
                  android:textColor="#000"
                  />


          </LinearLayout>
      </androidx.cardview.widget.CardView>
  </RelativeLayout>

</LinearLayout>
