<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:popupTheme="@style/AppTheme.PopUpOverlay" />

    <LinearLayout
        android:id="@+id/search_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            app:srcCompat="@drawable/ic_search"
            android:tint="@android:color/darker_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search City"
            android:textColor="@android:color/darker_gray"
            android:textSize="48sp"

            />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:id="@+id/weather_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:visibility="visible">


            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="260dp">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/gradient_dark_blue"
                    android:contentDescription="@string/imageview"
                    android:scaleType="centerCrop" />

                <LinearLayout
                    android:id="@+id/topContainer"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/city_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway_thin"
                        android:gravity="start|bottom"
                        android:padding="16dp"
                        android:text="@string/city"
                        android:textColor="@android:color/white"
                        android:textSize="28sp"
                        android:textStyle="bold" />




                </LinearLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@id/topContainer"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/gradient_dvider" />

                <LinearLayout
                    android:id="@+id/weather_type_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/weather_type_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/raleway_thin"
                        android:text="@string/weather_type"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:srcCompat="@drawable/sunny" />

                </LinearLayout>



                <TextView
                    android:id="@+id/temp_textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider"
                    android:layout_toRightOf="@id/weather_type_layout"
                    android:padding="16dp"
                    android:fontFamily="sans-serif-thin"
                    android:gravity="end"
                    android:text="@string/celsius"
                    android:textColor="@android:color/white"
                    android:textSize="60sp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:padding="4dp"
                    android:layout_below="@id/weather_type_layout">
                    <LinearLayout
                        android:id="@+id/sunrise_linear_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="vertical"
                        android:layout_marginEnd="16dp">

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:tint="@android:color/background_light"
                            app:srcCompat="@drawable/sunset" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="5:30"
                            android:textColor="@android:color/white"
                            android:fontFamily="sans-serif-condensed"
                            android:textStyle="bold"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/sunset_linear_layout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginEnd="16dp"
                        >

                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            app:srcCompat="@drawable/sunset"
                            android:tint="@android:color/background_light"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:text="5:30"
                            android:textColor="@android:color/white"
                            android:fontFamily="sans-serif-condensed"
                            android:textStyle="bold"/>

                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</LinearLayout>